# dependently-typed-language

./: CHANGELOG.md  haskell-play.cabal
src/: SimplyTypedLambdaCalculus.hs  Tartlet.hs  UntypedLambdaCalculus.hs
