cabal-version:      2.4
name:               haskell-play
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sebastian Robu
maintainer:         srobu@sonatype.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  -- Modules included in this executable, other than Main.
  other-modules:      Tartlet

  -- SimplyTypedLambdaCalculus
  -- UntypedLambdaCalculus

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base    ^>=4.14.3.0
    , relude

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
